add istio service mesh

--- a/istio-hands-on/manifests/kube/front.yaml
+++ b/istio-hands-on/manifests/kube/front.yaml
@@ -7,13 +7,11 @@ metadata:
 spec:
   selector:
     app: myapp-front
-  type: NodePort
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 80
-      targetPort: 80
-      nodePort: 32016
-
+      targetPort: 5000
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -32,11 +30,11 @@ spec:
         app: myapp-front
     spec:
       containers:
-        - image: 127.0.0.1:5001/myapp-front:v4
+        - image: 127.0.0.1:5001/myapp-front:v1.2
           #imagePullPolicy: Never
           name: myapp-front-pod
           ports:
-            - containerPort: 80
+            - containerPort: 5000
       imagePullSecrets:
         - name: regcred
 
