--- a/istio-hands-on/manifests/kube/back.yaml
+++ b/istio-hands-on/manifests/kube/back.yaml
@@ -7,12 +7,11 @@ metadata:
 spec:
   selector:
     app: myapp-back
-  type: NodePort
   ports:
     - protocol: TCP
+      name: http
       port: 80
       targetPort: 5000
-      nodePort: 32017
 ---
 apiVersion: apps/v1
 kind: Deployment
